--- a/gallery.html
+++ b/gallery.html
@@ -33,18 +33,18 @@
             <h1>Blogs Gallery</h1>
             <div class="blog-cards">
                 <div class="blog-card">
-                    <img src="Images/iphone 15 pro max.jpg" alt="Blog Image">
+                    <img src=" Images/pexels-avinash-kumar-299518778-16004744.jpg" alt="Blog Image">
                     <h3><a href="./blogs/Iphone 15 Pro Max  Full Review & Specifications.html">Iphone 15 Pro Max | Full Review & Specifications</a></h3>
                     <p>The Apple iPhone 15 Pro Max sets a new standard in smartphone technology, featuring a powerful A14 Bionic chip, a stunning 6.7-inch OLED display, and a top-tier camera system with a 108MP main sensor.</p>
                 </div>
                 <div class="blog-card">
-                    <img src="Images/BestGaming.jpg" alt="Blog Image">
+                    <img src="Images/BestGaming.jpg" alt="Toprevie best gaming laptop image">
                     <h3><a href="./blogs/Best Gaming Laptop 2024 A complete Guide.html">Best Gaming Laptop 2024</a></h3>
                     <p>2024 has brought a new level of power and flexibility to gaming laptops. Prices range from under $999 to $5,399.99 for the top MSI Titan 18 HX model.</p>
                 </div>
                 <div class="blog-card">
-                    <img src="Images/pexels-jessbaileydesign-748598.jpg" alt="Blog Image">
-                    <h3>The Art of Royal Dining</h3>
+                    <img src="Images/NBA 2k25 image.jpg" alt="NBA 2k25 ps5 game image">
+                    <h3><a href="./blogs/NBA 2K25 Ps5 Game TopReview Ratings & Answers.html">NBA 2K25 Ps5 Game TopReview Ratings & Answers</a></h3>
                     <p>Learn about the sophisticated dining setups that have graced royal tables throughout history.</p>
                 </div>
                 <div class="blog-card">
@@ -53,7 +53,7 @@
                     <p>Explore fashion trends that have been cherished by royalty and their influence on modern styles.</p>
                 </div>
                 <div class="blog-card">
-                    <img src="Images/pexels-avinash-kumar-299518778-16004744.jpg" alt="Blog Image">
+                    <img src="Images/iphone 15 pro max.jpg" alt="iphone 15 pro max image">
                     <h3>The Majesty of Royal Architecture</h3>
                     <p>An in-depth look at architectural marvels that define royal residences around the world.</p>
                 </div>
