--- a/gallery.html
+++ b/gallery.html
@@ -35,7 +35,7 @@
                 <div class="blog-card">
                     <img src=" Images/pexels-avinash-kumar-299518778-16004744.jpg" alt="Blog Image">
                     <h3><a href="./blogs/Iphone 15 Pro Max  Full Review & Specifications.html">Iphone 15 Pro Max | Full Review & Specifications</a></h3>
-                    <p>The Apple iPhone 15 Pro Max sets a new standard in smartphone technology, featuring a powerful A14 Bionic chip, a stunning 6.7-inch OLED display, and a top-tier camera system with a 108MP main sensor.</p>
+                    <p>The Apple iPhone 15 Pro Max sets a new standard in smartphone technology, featuring a powerful A14 Bionic chip.</p>
                 </div>
                 <div class="blog-card">
                     <img src="Images/BestGaming.jpg" alt="Toprevie best gaming laptop image">
@@ -45,7 +45,7 @@
                 <div class="blog-card">
                     <img src="Images/NBA 2k25 image.jpg" alt="NBA 2k25 ps5 game image">
                     <h3><a href="./blogs/NBA 2K25 Ps5 Game TopReview Ratings & Answers.html">NBA 2K25 Ps5 Game TopReview Ratings & Answers</a></h3>
-                    <p>Learn about the sophisticated dining setups that have graced royal tables throughout history.</p>
+                    <p>"The true test of any game is not how it handles success, but how it handles failure." - Sid Meier, renowned game designer.</p>
                 </div>
                 <div class="blog-card">
                     <img src="Images/pexels-jakubzerdzicki-22610370.jpg" alt="Blog Image">
