Update Best Gaming Laptop 2024 A complete Guide.html

--- a/blogs/Best Gaming Laptop 2024 A complete Guide.html
+++ b/blogs/Best Gaming Laptop 2024 A complete Guide.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Best Gaming Laptop 2024 A complete Guide.</title>
+    <meta name="description" content="Discover the best gaming laptops of 2024 in our full guide. Compare top models, specs, and features to find the perfect laptop for your gaming needs.">
+    <title>Best Gaming Laptop 2024 Prices Review & more</title>
     <link rel="stylesheet" href="../style.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Cormorant+Garamond:wght@400;700&display=swap" rel="stylesheet">
 </head>
