--- a/about.html
+++ b/about.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>TopReview | Product Reviews</title>
+    <meta name="description" content="Welcome to TopReview, your trusted source for expert product reviews, comparisons, and industry insights. Led by Mr. Rockey, we provide honest, unbiased reviews on the latest tech, gadgets, and lifestyle essentials.">
+    <title>TopReview | All in 1 Product Review</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Cormorant+Garamond:wght@400;700&display=swap" rel="stylesheet">
 </head>
