--- a/gallery.html
+++ b/gallery.html
@@ -4,7 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>TopReview | Product Reviews</title>
+    <meta name="description" content="Explore the TopReview gallery of blogs featuring in-depth product reviews and expert insights. Find comparisons and recommendations on the latest tech and gadgets.">
+    <link rel="canonical" href="https://topreview.github.io/gallery.html">
+    <meta name="robots" content="index, follow">
+    <meta property="og:title" content="TopReview Blogs Gallery">
+<meta property="og:description" content="Browse through TopReview’s collection of detailed blogs on product reviews, comparisons, and tech insights.">
+<meta property="og:url" content="https://topreview.github.io/gallery.html">
+<meta property="og:type" content="website">
+<meta property="og:image" content="https://topreview.github.io/images/logo.ico">
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="TopReview Blogs Gallery">
+<meta name="twitter:description" content="Explore the TopReview blog gallery with reviews, comparisons, and more.">
+<meta name="twitter:image" content="https://topreview.github.io/images/logo.ico">
+    <title>TopReview | Product Reviews Gallery</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Cormorant+Garamond:wght@400;700&display=swap" rel="stylesheet">
 </head>
