--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>TopReview | Product Reviews</title>
+    <meta name="description" content="Get in touch with TopReview. Contact us with any questions, suggestions, or feedback. Reach us via email at topreviewshelp@gmail.com, or call +923287618199. We're here to help!">
+    <title>TopReview | Product Reviews Conatact</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Cormorant+Garamond:wght@400;700&display=swap" rel="stylesheet">
 </head>
