Update Iphone 15 Pro Max  Full Review & Specifications.html

--- a/blogs/Iphone 15 Pro Max  Full Review & Specifications.html
+++ b/blogs/Iphone 15 Pro Max  Full Review & Specifications.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Best Gaming Laptop 2024 A complete Guide.</title>
+    <title>Iphone 15 Pro MAX Full specifications & Prices</title>
+    <meta name="description" content="Find detailed specifications and pricing for the Apple iPhone 15 Pro Max. Learn about its features, performance, and cost options to make an informed purchase decision." />
     <link rel="stylesheet" href="../style.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Cormorant+Garamond:wght@400;700&display=swap" rel="stylesheet">
 </head>
