Update NBA 2K25 Ps5 Game TopReview Ratings & Answers.html

--- a/blogs/NBA 2K25 Ps5 Game TopReview Ratings & Answers.html
+++ b/blogs/NBA 2K25 Ps5 Game TopReview Ratings & Answers.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 	<title>NBA 2K25 Ps5 Game TopReview Ratings &amp; Answers</title>
