--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
             <h2 class="section-title">Top Blogs</h2>
             <div class="blog-cards">
                 <div class="blog-card">
-                    <img src="Images/best laptops.jpg" alt="Blog Image">
+                    <img src="Images/air buds.jpg" alt="Blog Image">
                     <h3>Art of Sophisticated Interiors</h3>
                 </div>
                 <div class="blog-card">
-                    <img src="Images/faction.jpg" alt="Blog Image">
+                    <img src="Images/iphone 15 pro max unboxing.jpg" alt="Blog Image">
                     <h3>Royal Fashion Trends</h3>
                 </div>
                 <div class="blog-card">
