--- a/blogs/Iphone 15 Pro Max  Full Review & Specifications.html
+++ b/blogs/Iphone 15 Pro Max  Full Review & Specifications.html
@@ -63,7 +63,7 @@ Experience true luxury and unparalleled performance with the Apple iPhone 15 Pro
                         <p>At the heart of the Apple iPhone 15 Pro Max lies the powerful A14 Bionic chip, the latest and greatest processor from Apple. This cutting-edge chipset delivers unparalleled performance, offering lightning-fast processing speeds and seamless multitasking capabilities.</p>
                         <p>The A14 Bionic chip is built on a 5nm process, allowing for a significant increase in transistor density and power efficiency. This translates to improved overall performance, with the chip delivering up to 40% faster CPU performance and 30% faster graphics processing compared to the previous generation.</p>
                         <p>In terms of storage options, the iPhone 15 Pro Max offers a range of choices to suit the needs of various users. The base model comes with 128GB of internal storage, while higher-end configurations offer 256GB, 512GB, and even 1TB of storage space. This ample storage capacity ensures that users can store their vast collection of photos, videos, apps, and files without worrying about running out of space.</p>
-                        <img src="Images/iphone 15 pro max unboxing.jpg" alt="Blog Image">
+                        <img src="../Images/iphone 15 pro max unboxing.jpg" alt="iphone 15 pro max image">
                     </section>
 
                     <section>
