--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <nav>
         <div class="container nav-container">
             <div class="logo">
-                <a href="index.html">TopReview</a>
+                <a href="https://topreviiew.github.io/ ">TopReview</a>
             </div>
             <div class="menu">
                 <a href="./index.html">Home</a>
