--- a/gallery.html
+++ b/gallery.html
@@ -26,7 +26,7 @@
     <nav>
         <div class="container nav-container">
             <div class="logo">
-                <a href="index.html">TopReview</a>
+                <a href="https://topreviiew.github.io/">TopReview</a>
             </div>
             <div class="menu">
                 <a href="./index.html">Home</a>
@@ -89,7 +89,7 @@
             <div class="footer-column">
                 <h3>Quick Links</h3>
                 <ul>
-                    <li><a href="./index.html">Home</a></li>
+                    <a href="https://topreviiew.github.io/">Home</a>
                     <li><a href="./gallery.html">Blogs Gallery</a></li>
                     <li><a href="./contact.html">Contact Us</a></li>
                     <li><a href="./about.html">About Us</a></li>
