--- a/contact.html
+++ b/contact.html
@@ -15,10 +15,10 @@
     <nav>
         <div class="container nav-container">
             <div class="logo">
-                <a href="index.html">TopReview</a>
+                <a href="https://topreviiew.github.io/">TopReview</a>
             </div>
             <div class="menu">
-                <a href="./index.html">Home</a>
+                <a href="https://topreviiew.github.io/">Home</a>
                 <a href="./gallery.html">Blogs Gallery</a>
                 <a href="./contact.html">Contact Us</a>
                 <a href="./about.html">About Us</a>
@@ -107,7 +107,7 @@
             <div class="footer-column">
                 <h3>Quick Links</h3>
                 <ul>
-                    <li><a href="./index.html">Home</a></li>
+                    <a href="https://topreviiew.github.io/">Home</a>
                     <li><a href="./gallery.html">Blogs Gallery</a></li>
                     <li><a href="./contact.html">Contact Us</a></li>
                     <li><a href="./about.html"></a>About Us</li>
