--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Explore in-depth product reviews and comparisons at TopReview. Stay informed with our expert insights on the latest gadgets, tech, and lifestyle products.">
     <link rel="canonical" href="https://topreview.github.io/">
     <meta name="robots" content="index, follow">
-    <title>TopReview | Product Reviews</title>
+    <title>TopReview | Blogs & Product Reviews</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Cormorant+Garamond:wght@400;700&display=swap" rel="stylesheet">
 </head>
