Update Best Gaming Phone 2024: Top Picks for Gamers.html

--- a/blogs/Best Gaming Phone 2024: Top Picks for Gamers.html
+++ b/blogs/Best Gaming Phone 2024: Top Picks for Gamers.html
@@ -19,7 +19,7 @@
 
 	<!-- Robots Meta Tag -->
 	<meta name="robots" content="index, follow">
-
+ <link rel="stylesheet" href="../style.css">
 	<!-- Open Graph Meta Tags for Social Media Sharing -->
 	<meta property="og:title" content="Best Gaming Phone 2024: Top Picks for Gamers">
 	<meta property="og:description" content="Discover the top gaming phones of 2024 for an unparalleled mobile gaming experience. From powerful processors to stunning displays, find your perfect gaming companion here." />
