--- a/gallery.html
+++ b/gallery.html
@@ -60,9 +60,9 @@
                     <p>"The true test of any game is not how it handles success, but how it handles failure." - Sid Meier, renowned game designer.</p>
                 </div>
                 <div class="blog-card">
-                    <img src="Images/pexels-jakubzerdzicki-22610370.jpg" alt="Blog Image">
-                    <h3>Timeless Royal Fashion Trends</h3>
-                    <p>Explore fashion trends that have been cherished by royalty and their influence on modern styles.</p>
+                    <img src="Images/best gaming pgone image.jpg" alt="best gaming phone images from topreview">
+                    <h3><a href="./blogs/Best Gaming Phone 2024: Top Picks for Gamers.html">Best Gaming Phone 2024: Top Picks for Gamers.</a></h3>
+                    <p>Are you ready to find the ultimate mobile gaming experience in 2024? The race for the best gaming phone is getting fiercer.</p>
                 </div>
                 <div class="blog-card">
                     <img src="Images/iphone 15 pro max.jpg" alt="iphone 15 pro max image">
