--- a/index.html
+++ b/index.html
@@ -65,9 +65,8 @@
         <div class="container">
             <h2 class="section-title">Top Blogs</h2>
             <div class="blog-cards">
-                <div class="blog-card">
-                    <img src="Images/air buds.jpg" alt="Blog Image">
-                    <h3>Art of Sophisticated Interiors</h3>
+                     <img src="Images/best gaming pgone image.jpg" alt="best gaming phone images from topreview">
+                    <h3><a href="./blogs/Best Gaming Phone 2024: Top Picks for Gamers.html">Best Gaming Phone 2024: Top Picks for Gamers.</a></h3>
                 </div>
                 <div class="blog-card">
                     <img src="Images/iphone 15 pro max unboxing.jpg" alt="Blog Image">
